--- a/latex-test/ref/Deprecated/Deprecated.tex
+++ b/latex-test/ref/Deprecated/Deprecated.tex
@@ -9,9 +9,8 @@ module Deprecated (
 
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-deprecated\ ::\ Int
+deprecated :: Int
 \end{tabular}]\haddockbegindoc
 Deprecated: Don't use this\par
 Docs for something deprecated\par
-
 \end{haddockdesc}
