--- a/latex-test/ref/Example/Example.tex
+++ b/latex-test/ref/Example/Example.tex
@@ -9,7 +9,7 @@ module Example (
 
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-split\ ::\ Int\ ->\ ()
+split :: Int -> ()
 \end{tabular}]\haddockbegindoc
 Example use.\par
 \begin{quote}
@@ -26,5 +26,4 @@ Example use.\par
 
 \end{verbatim}}
 \end{quote}
-
 \end{haddockdesc}
