--- a/latex-test/ref/Simple/Simple.tex
+++ b/latex-test/ref/Simple/Simple.tex
@@ -9,8 +9,7 @@ module Simple (
 
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-foo\ ::\ t
+foo :: t
 \end{tabular}]\haddockbegindoc
 This is foo.\par
-
 \end{haddockdesc}
