--- a/latex-test/ref/DefaultSignatures/DefaultSignatures.tex
+++ b/latex-test/ref/DefaultSignatures/DefaultSignatures.tex
@@ -9,40 +9,36 @@ module DefaultSignatures (
 
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-class\ Foo\ a\ where
+class Foo a where
 \end{tabular}]\haddockbegindoc
 Documentation for Foo.\par
-
 \haddockpremethods{}\emph{Methods}
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-bar\ ::\ a\ ->\ String
+bar :: a -> String
 \end{tabular}]\haddockbegindoc
 Documentation for bar and baz.\par
-
 \end{haddockdesc}
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-default\ bar\ ::\ Show\ a\ =>\ a\ ->\ String
+default bar :: Show a => a -> String
 \end{tabular}]
 \end{haddockdesc}
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-baz\ ::\ a\ ->\ String
+baz :: a -> String
 \end{tabular}]\haddockbegindoc
 Documentation for bar and baz.\par
-
 \end{haddockdesc}
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-baz'\ ::\ String\ ->\ a
+baz' :: String -> a
 \end{tabular}]\haddockbegindoc
 Documentation for baz'.\par
-
 \end{haddockdesc}
 \begin{haddockdesc}
 \item[\begin{tabular}{@{}l}
-default\ baz'\ ::\ Read\ a\ =>\ String\ ->\ a
+default baz' :: Read a => String -> a
 \end{tabular}]
 \end{haddockdesc}
 \end{haddockdesc}
